--- a/index.html
+++ b/index.html
@@ -5,13 +5,59 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Badsha Travels</title>
   <!-- CSS Link  -->
+
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/media.css">
+  <!-- Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
   <!-- Header Part start -->
   <header>
-
+      <div class="header_part">
+        <div class="logo">
+          <img src="./Images/Group 40071 (2).png" alt="">
+          <h3><span class="name">Badsha</span><span class="travel">Travels</span></h3>
+        </div>
+        <div class="nav">
+          <nav>
+            <ul>
+              <li><a class="home" href="">Home</a></li>
+              <li><a href="">Packages</a></li>
+              <li><a href="">Testimonial</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="banner">
+        <div class="banner-text">
+          <h3>Explore Your Travel</h3>
+          <p>Travel can represent financial risk. No matter your destination, there’s always a chance you could face an
+            unanticipated
+            cancellation, interruption, mishap, or emergency.</p>
+        <div class="input-field">
+          <div class="input-icon">
+            <i class="fa-solid fa-chevron-down"></i>
+            <input type="text" placeholder="Where go">
+          </div>
+            <div class="input-icon">
+              <i class="fa-solid fa-chevron-down"></i>
+              <input type="text" placeholder="When">
+            </div>
+            <div class="input-icon">
+              <i class="fa-solid fa-chevron-down"></i>
+              <input type="text" placeholder="Select Type">
+            </div>
+            <button class="btn"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
+            </div>
+        </div>
+        
+      </div>
   </header>
   <!-- Header Part End -->
 
@@ -23,7 +69,7 @@
 
   <!-- Footer Part Start -->
   <footer>
-    
+
   </footer>
   <!-- Footer Part End -->
 
