Tours section added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,25 @@
       </div>
   </header>
   <!-- Header Part End -->
-
+  <section class="Tours">
+    <div class="text-tour">
+      <h3>Our Popular Tours</h3>
+      <p>Travel can represent financial risk. No matter your destination, there’s always a chance you could face an unanticipated
+      cancellation, interruption, mishap, or emergency.</p>
+      <ul>
+        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+        <li>Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+      </ul>
+      <p>Travel can represent financial risk. No matter your destination, there’s always a chance you could face an
+        unanticipated
+        cancellation, interruption, mishap, or emergency.</p>
+        <button class="btn">Read More</button>
+    </div>
+    <div class="tour-img">
+      <img src="./Images/Rectangle 4.png" alt="">
+    </div>
+  </section>
   <!-- Main Part Start -->
   <main>
 
