--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       </div>
   </header>
   <!-- Header Part End -->
+  <!-- Turs Section  -->
   <section class="Tours">
     <div class="text-tour">
       <h3>Our Popular Tours</h3>
@@ -77,6 +78,62 @@
     </div>
     <div class="tour-img">
       <img src="./Images/Rectangle 4.png" alt="">
+    </div>
+  </section>
+  <!--Destination Part -->
+  <section class="destination">
+    <div class="destination-text">
+      <h3>Choose Your Destination</h3>
+      <p>Travel can represent financial risk. No matter your destination, there’s always a chance you could face an unanticipated
+      cancellation, interruption, mishap, or emergency.
+      
+      WorldTrips offers travel insurance and travel assistance services to guide you through the unexpected and help ease your
+      stress. We enable travelers to explore the world with confidence.</p>
+    </div>
+    <div class="destination-img">
+      <div class="contry-img-1">
+        <img src="./Images/Rectangle 5.png" alt="">
+        <div class="contry-name-1">
+          <h3>Maldives</h3>
+        </div>
+      </div>
+      <div class="contry-img-2">
+        <img src="./Images/Rectangle 8.png" alt="">
+        <div class="contry-name-2">
+          <h3>Indonesia</h3>
+        </div>
+      </div>
+      <div class="contry-img-3">
+        <img src="./Images/Rectangle 6.png" alt="">
+        <div class="contry-name-3">
+          <h3>Srilanka</h3>
+        </div>
+      </div>
+      <div class="contry-img-4">
+        <img src="./Images/Rectangle 7.png" alt="">
+        <div class="contry-name-4">
+          <h3>North America</h3>
+        </div>
+      </div>
+      <div class="contry-img-5">
+        <img src="./Images/Rectangle 9.png" alt="">
+        <div class="contry-name-5">
+          <h3>Kashmir</h3>
+        </div>
+      </div>
+      <div class="contry-img-6">
+        <img src="./Images/Rectangle 11.png" alt="">
+        <div class="contry-name-6">
+          <h3>Bangladesh</h3>
+        </div>
+      </div>
+      <div class="contry-img-7">
+        <img src="./Images/Rectangle 10.png" alt="">
+        <div class="contry-name-7">
+          <h3>Bandarban</h3>
+        </div>
+      </div>
+    </div>
     </div>
   </section>
   <!-- Main Part Start -->
