chose us part added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Badsha Travels</title>
+  <!-- Favicon  -->
+  <link rel="shortcut icon" href="./Images/Group 40071 (2).png" type="image/x-icon">
   <!-- CSS Link  -->
 
   <link rel="stylesheet" href="./styles/style.css">
@@ -15,6 +17,8 @@
 
 </head>
 <body>
+    <!-- Main Part Start -->
+    <main>
   <!-- Header Part start -->
   <header>
       <div class="header_part">
@@ -136,8 +140,33 @@
     </div>
     </div>
   </section>
-  <!-- Main Part Start -->
-  <main>
+  <!-- Why Choose Us -->
+  <div class="why-chose-us">
+    <div class="why-chose-text">
+      <h3>Why Choose Us</h3>
+      <p>On this site, you can get discounts on almost anything, including flights, hotel, cars, activities, and more.On this site, you can get discounts on almost anything, including flights, hotel, cars, activities, and more.</p>
+    </div>
+    <div class="card-section">
+      <div class="card">
+        <img src="./Images/icon/hospital.jpg" alt="">
+        <h4>Handpicked Hotels</h4>
+        <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim
+          adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+      </div>
+      <div class="card-1">
+        <img src="./Images/icon/map.png" alt="">
+        <h4>World Class Service</h4>
+        <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim
+          adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+      </div>
+      <div class="card-2">
+        <img src="./Images/icon/discound.png" alt="">
+        <h4>Best Price Guarantee</h4>
+        <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo sagittis dignissim
+          adipiscing quis. Habitant adipiscing risus natoque aliquet.</p>
+      </div>
+    </div>
+  </div>
 
   </main>
   <!-- Main Part End -->
