main part added

--- a/index.html
+++ b/index.html
@@ -168,12 +168,31 @@
     </div>
   </div>
 
+  <!-- Newsletter -->
+  <section class="Newsletter">
+    <div class="form">
+      <h3>Newsletter</h3>
+      <p>Get your daily dose of travel news & tips. Sign up today!</p>
+      <input type="text" placeholder="Enter your name">
+      <input type="text" placeholder="Enter your email">
+      <button class="btn-subs">Subscribe</button>
+    </div>
+    <div class="form-img">
+      <img src="./Images/Rectangle 8 (1).png" alt="">
+      <div class="img-text">
+        <h4>Travel.com</h4>
+        <h3>Save up to 70%</h3>
+      </div>
+    </div>
+  </section>
   </main>
   <!-- Main Part End -->
 
   <!-- Footer Part Start -->
   <footer>
-
+    <div class="foot">
+      <img src="./Images/Group 40071 (2).png" alt="">
+    </div>
   </footer>
   <!-- Footer Part End -->
 
