--- a/index.html
+++ b/index.html
@@ -190,9 +190,22 @@
 
   <!-- Footer Part Start -->
   <footer>
-    <div class="foot">
+    <div class="foot-title">
       <img src="./Images/Group 40071 (2).png" alt="">
+      <h3>Badsha <span class="travel">Travels</span></h3>
+      
     </div>
+    <div class="icon">
+      <p>Travel can represent financial risk. No matter your destination, there’s always a chance you could face an
+        unanticipated
+        cancellation, interruption, mishap, or emergency.</p>
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-github"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-twitter"></i>
+    </div>
+    <hr class="line">
+    <p>2024, &copy; All Rights Reserved by Badsha Travels</p>
   </footer>
   <!-- Footer Part End -->
 
